fix overlapped links

--- a/main.css
+++ b/main.css
@@ -173,7 +173,17 @@ p {
 }
 
 .socialButton {
-  max-height: 40px;
+  height: 40px;
+}
+
+.socialLink {
+  margin-top: 40px;
+  margin-bottom: 40px;
+  display: inline-block;
+}
+
+#contact {
+  padding-bottom: 0;
 }
 
 @media only screen and (max-width: 768px) {
@@ -331,6 +341,7 @@ p {
   .productBody {
     padding-left: 15px;
     padding-right: 15px;
+    padding-bottom: 20px;
   }
 
   .headerContainer {
@@ -373,11 +384,11 @@ p {
   width: 100%;
   margin: 0;
   margin-left: 30px;
-  margin-top: -15px;
+  margin-top: -35px;
   height: 25px;
 }
 
 .socialButton {
-  max-height: 100%;
+  max-height: 30px;
 }
 }
